--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,12 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   <servlet>
-    <servlet-name>appEngineFileUpload</servlet-name>
-    <servlet-class>com.adobe.web.servlet.GoogleAppEngineFileUploadServlet</servlet-class>
+    <servlet-name>uploadFile</servlet-name>
+    <servlet-class>com.adobe.web.servlet.FileUploadServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>appEngineFileUpload</servlet-name>
-    <url-pattern>/appEngineFileUpload</url-pattern>
+    <servlet-name>uploadFile</servlet-name>
+    <url-pattern>/uploadFil</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
